<?xml version="1.0"?>
<package format="2">
  <name>TestExam</name>
  <version>0.0.0</version>
  <description>The TestExam package</description>

  <maintainer email="Gsvend20@student.aau.dk">ros</maintainer>

  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
